Fix results sidebar on mobile

--- a/modules/search/client/less/sidebar.less
+++ b/modules/search/client/less/sidebar.less
@@ -15,6 +15,7 @@
   // Tabs are hidden on small screens
   // They are controlled via view controller JS instead
   @media (max-width: @screen-xs-max) {
+    width: 100%;
     padding-top: 20px;
     .nav-tabs {
       display: none;
